<resources>
    <string name="app_name">Violapp</string>
    <string name="tempo">TEMPO</string>
    <string name="default_tempo_60">60</string>
    <string name="increase_tempo">increase tempo</string>
    <string name="decrease_tempo">decrease tempo</string>
    <string name="quarter_note">quarter note</string>
    <string name="equal">=</string>
    <string name="bpm">BPM</string>
    <string name="default_tempo_term">Adagio</string>
    <string name="not_supported_yet">Not supported, yet</string>
    <string name="default_time_signature">2</string>

    <string name="file_metronome">file metronome</string>
    <string name="shared_tempo">shared tempo</string>
    <string name="shared_time_signature">shared time signature</string>
    <string name="shared_mute_state">shared mute state</string>
    <string name="shared_scale">shared scale</string>

    <integer-array name="time_signature">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </integer-array>

    <string name="scale_all_notes">Scale: All notes</string>
    <string name="choose_scale">Choose Scale</string>
    <string name="first_position">First Position</string>
    <string name="note_images">note images</string>
    <string name="image_scale">image scale</string>
    <string name="metronome">Metronome</string>
    <string name="sample_sound">Sample Sound</string>
    <string name="app_icon">app icon</string>
</resources>