<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/quarter_note"
        android:src="@drawable/quarter_note" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:gravity="top"
        android:text="@string/equal"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/text_view_tempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_tempo_60"
        android:textColor="@color/orange"
        android:textSize="64sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:gravity="bottom"
        android:text="@string/bpm"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp" />

</androidx.appcompat.widget.LinearLayoutCompat>