<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_container_time_signature"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/metronome_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/view_tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/seperator_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/quarter_note"
                android:src="@drawable/quarter_note" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:gravity="top"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/text_view_tempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_tempo_60"
                android:textColor="@color/teal"
                android:textSize="64sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:gravity="bottom"
                android:text="@string/bpm"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_decr"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/minus_icon"
            android:contentDescription="@string/decrease_tempo"
            app:layout_constraintBottom_toBottomOf="@+id/view_tempo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_tempo" />

        <ImageButton
            android:id="@+id/btn_incr"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/plus_icon"
            android:contentDescription="@string/increase_tempo"
            app:layout_constraintBottom_toBottomOf="@+id/view_tempo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_tempo" />

        <View
            android:id="@+id/seperator_view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/teal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/btn_play"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/toggle_button_play"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seperator_view" />

        <TextView
            android:id="@+id/text_view_tempo_term"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/default_tempo_term"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/teal"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seperator_view" />

        <TextView
            android:id="@+id/text_view_time_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_time_signature"
            android:textColor="@color/teal"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_play"
            app:layout_constraintTop_toBottomOf="@+id/seperator_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>